Fix an undesired side-effect of 04b71cd
The "info" icons after the similar artists in the artist details pane
had become invisible and some other info icons in the sidebar were
truncated.

--- a/css/style-sidebar.css
+++ b/css/style-sidebar.css
@@ -97,6 +97,8 @@
 	vertical-align: middle;
 	margin-top: -3px;
 	margin-bottom: -3px;
+	height: 16px;
+	width: 16px;
 }
 
 #app-sidebar h2 .icon-info {
